--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "next": "14.1.0",
+    "next-intl": "^3.7.0",
     "next-themes": "^0.2.1",
     "react": "^18",
     "react-dom": "^18"
