init clerk; create: sign in/up pages, card component, product model/dto

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@clerk/nextjs": "^4.29.9",
     "@heroicons/react": "^2.1.1",
     "clsx": "^2.1.0",
     "framer-motion": "^11.0.5",
