--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@clerk/localizations": "^1.26.16",
     "@clerk/nextjs": "^4.29.9",
     "@heroicons/react": "^2.1.1",
     "clsx": "^2.1.0",
