--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@clerk/localizations": "^1.26.16",
     "@clerk/nextjs": "^4.29.9",
+    "@clerk/themes": "^1.7.10",
     "@heroicons/react": "^2.1.1",
     "clsx": "^2.1.0",
     "framer-motion": "^11.0.5",
