Add auth with clerk (#5)
* init clerk; create: sign in/up pages, card component, product model/dto

* add localization for clerk

* add change theme for clerk

--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@clerk/localizations": "^1.26.16",
+    "@clerk/nextjs": "^4.29.9",
+    "@clerk/themes": "^1.7.10",
     "@heroicons/react": "^2.1.1",
     "clsx": "^2.1.0",
     "framer-motion": "^11.0.5",
