--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "next-intl": "^3.7.0",
     "next-safe-action": "^6.1.0",
     "next-themes": "^0.2.1",
+    "rc-pagination": "^4.0.4",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.50.1",
