--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.50.1",
+    "react-slick": "^0.30.2",
+    "slick-carousel": "^1.8.1",
     "use-debounce": "^10.0.0",
     "zod": "^3.22.4"
   },
@@ -31,6 +33,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-slick": "^0.23.13",
     "eslint": "^8",
     "eslint-config-next": "14.1.0",
     "sass": "^1.70.0",
