--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@clerk/nextjs": "^4.29.9",
     "@clerk/themes": "^1.7.10",
     "@heroicons/react": "^2.1.1",
+    "@hookform/resolvers": "^3.3.4",
     "clsx": "^2.1.0",
     "framer-motion": "^11.0.5",
     "mongoose": "^8.1.3",
