--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@clerk/nextjs": "^4.29.9",
     "@clerk/themes": "^1.7.10",
     "@heroicons/react": "^2.1.1",
+    "@hookform/resolvers": "^3.3.4",
     "clsx": "^2.1.0",
     "framer-motion": "^11.0.5",
     "mongoose": "^8.1.3",
@@ -24,6 +25,8 @@
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.50.1",
+    "react-slick": "^0.30.2",
+    "slick-carousel": "^1.8.1",
     "use-debounce": "^10.0.0",
     "zod": "^3.22.4"
   },
@@ -31,6 +34,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-slick": "^0.23.13",
     "eslint": "^8",
     "eslint-config-next": "14.1.0",
     "sass": "^1.70.0",
